# OpenGL-Boilerplate

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: glfw3_boilerplate.cpp
